First commit for Andrew

--- a/views/partials/landing.jade
+++ b/views/partials/landing.jade
@@ -4,16 +4,7 @@ block css
 .hero-container
  img.hero(src="/images/road_crop.png")
  div.hero-content
-  h1.title 30 WORDS Language Guides
-  h2.subtitle Connecting Intrepid Travelers with those they Meet.
-  //- .blurb So, you've wandered off the beaten path in Asia.
-  //- h5 Anywhere you travel,
-  //- h4.slogan Start the Conversation
-
-.as-seen-in
-  ul
-    li NyTimes
-    li FoxNews
+  h1.title Andrew Kitchell
 
 .feature-box
   div
