Cleaned up files

--- a/views/partials/navlist.jade
+++ b/views/partials/navlist.jade
@@ -4,6 +4,6 @@ nav.nav-list
 
   ul
     li
-     a(href='demo', ng-class="{active:isActive('/demo')}") Design
+     a(href='demo', ng-class="{active:isActive('/demo')}") Resume
     li
      a(href='162.243.150.16') Blog
