--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,11 +9,9 @@ html(ng-app="myApp")
     link(rel='stylesheet', href='https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css')
     link(rel='stylesheet', href='/css/app.css')
     link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Open+Sans+Condensed:300', rel='stylesheet', type='text/css')
-    link(rel='stylesheet', href='/css/store.css')
-    link(rel='stylesheet', href='/css/free.css')
 
   body
 
-    navlist(ng-controller="NavController")
+    navlist(ng-controller="NavCtrl")
 
     block body
