--- a/views/partials/landing.jade
+++ b/views/partials/landing.jade
@@ -4,31 +4,4 @@ block css
 .hero-container
  img.hero(src="/images/road_crop.png")
  div.hero-content
-  h1.title Andrew Kitchell
-
-.feature-box
-  div
-    h2 Holiday Time!
-    div 30 WORDS slides nicely into any stocking.  Or pocket for that matter.
-  img(src='/images/guideOpenedTags.png')
-
-.feature-box
-  img(src='/images/guideOpened.png')
-  div.float-right
-    h2 The World's Most Durable Guide
-    div 30 WORDS slides nicely into any stocking.  Or pocket for that matter.
-
-.feature-box
-  div.float-right
-    h2 100% Upcyclable
-    div Boom!  There is no cleaner way to travel.
-  img(src='/images/guideOpened.png')
-
-.feature-box
-  div
-    h2 Everything you Need. Quickly.
-    div 30 WORDS slides nicely into any stocking.  Or pocket for that matter.
-  img(src='/images/guideOpenedTags.png')
-
-.feature-box
-  p Unlimited Battery Life
+  h1.title Hello
